--- a/my-blog-backend/package.json
+++ b/my-blog-backend/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "firebase-admin": "^12.1.1",
+    "mongodb": "^6.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
