--- a/my-blog-backend/package.json
+++ b/my-blog-backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
     "mongodb": "^6.7.0"
